0.02
 - Fix test temporarily.
 - Update example output.

0.01 2023-06-23T18:24:33+02:00
 - First version.